fix hover spacing

--- a/src/public/app/app.component.styl
+++ b/src/public/app/app.component.styl
@@ -4,9 +4,14 @@
   justify-content: space-between
   li.nav-item
     flex: 1
-
+    
+.nav-item
+  padding: 10px 0px
+  
 .dropdown-menu
   min-width: 100%
   display: none
 
-.dropdown:hover .dropdown-menu {display: block;}
+.dropdown:hover .dropdown-menu 
+  display: block
+  top: 45px
